made the h2o api use more data objects. added better handling of redirect responses. cleaned up the h2o api some. cleaned up some findbugs warnings.